[package]
name = "rep-pro"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.12"
aws-sdk-kms = "1.97.0"
base64 = "0.22.1"
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
dotenvy = "0.15.7"
