[package]
name = "rep-pro"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.12"
aws-sdk-kms = "1.97.0"
base64 = "0.22.1"
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid" ] }
dotenvy = "0.15.7"
axum = "0.8.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["registry", "env-filter"] }
tracing-error = "0.2.1"
thiserror = "2.0.18"
color-eyre = "0.6.5"
secrecy = { version = "0.10.3", features = ["serde"] }
async-trait = "0.1.89"
